<!-- Copyright (C) 2020 Abdoriod (Abdullah Alialdin)
     Licensed under the Apache License, Version 2.0 (the "License");
     you may not use this file except in compliance with the License.
     You may obtain a copy of the License at
          http://www.apache.org/licenses/LICENSE-2.0
     Unless required by applicable law or agreed to in writing, software
     distributed under the License is distributed on an "AS IS" BASIS,
     WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
     See the License for the specific language governing permissions and
     limitations under the License.
-->
<resources>
    <string name="app_name">English Alphabet</string>
    <string name="about_text">
        English Alphabet v1.0\n\n
        Copyright © 2020 Abdoriod (Abdullah Alialdin)
        Licensed under the Apache License, Version 2.0 (the "License");\n
        you may not use this file except in compliance with the License.\n
        You may obtain a copy of the License at
          \nhttp://www.apache.org/licenses/LICENSE-2.0\n
        Unless required by applicable law or agreed to in writing, software
        distributed under the License is distributed on an "AS IS" BASIS,
        WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.\n
        See the License for the specific language governing permissions and
        limitations under the License.\n\n
        All image assets designed by Freepik and modified by the developer\n
        https://www.freepik.com\n
        and all sounds generated by Huawei ML KIT-TTS and An internet connection is required to obtain the sounds.
        and all rights reserved to the developers © 2020\n\n
        Privacy Policy:\n\n
        Date: October 2020 \n\n
        What information does the app collect?\n
        We collect none of your information nor do we share any of your information with 3rd parties.
        \n\n
        Why do we require permission?\n
        1. Only internet permission required from Google AdMob to display ads.\n\n
        2. Permission to access the internet and network status is required from Huawei to obtain correct pronunciation of letters and words.\n\n

        Follow and Feedback:
    </string>
    <string name="email" translatable="false">abdullah.alialdin@gmail.com</string>
    <string name="email_subject">English Alphabet FeedBack</string>
    <string name="twitter" translatable="false">https://twitter.com/abdoroid</string>
    <string name="youtube" translatable="false">http://www.youtube.com/c/Abdoroid</string>
    <string name="linkedin" translatable="false">https://www.linkedin.com/in/abdullah-alialdin/</string>
    <string name="facebook" translatable="false">https://www.facebook.com/abdoroid.channel</string>
    <string name="google_play_url" translatable="false">https://appgallery.huawei.com/#/app/C103111305</string>
    <string name="back_arrow_des">back arrow</string>
    <string name="next_arrow_des">next arrow</string>
    <string name="content_image_des">content image</string>
    <string name="text_image_des">text image</string>
    <string name="category_image">Category Image</string>
    <string name="cat_alphabet" translatable="false">Alphabet</string>
    <string name="cat_numbers" translatable="false">Numbers</string>
    <string name="cat_animals" translatable="false">Animals</string>
    <string name="cat_food" translatable="false">Food</string>
    <string name="cat_sports" translatable="false">Sports</string>
    <string name="cat_transports" translatable="false">Transports</string>
    <string name="cat_objects" translatable="false">Objects</string>
    <string name="button_x" translatable="false">x</string>
    <string name="gmail_icon">gmail icon</string>
    <string name="twitter_icon">twitter icon</string>
    <string name="youtube_icon">youtube icon</string>
    <string name="linkedin_icon">linkedin icon</string>
    <string name="flash_cards" translatable="false">Flashcards</string>
    <string name="tracing" translatable="false">Tracing</string>
    <string name="color_red_description">color red</string>
    <string name="color_blue_description">color blue</string>
    <string name="color_green_description">color green</string>
    <string name="color_purple_description">color purple</string>
    <string name="color_brown_description">color brown</string>
    <string name="color_pink_description">color pink</string>
    <string name="speaker_description">speaker</string>
    <string name="share_message">A very fun program for teaching children English letters and some simple words </string>
    <string name="share">Share</string>
    <string name="rate">Rate</string>
    <string name="about">About</string>
    <string name="ApiKey" translatable="false">Put your key here</string>
    <string name="settings">Settings</string>
    <string name="banner_ad_id" translatable="false">Put your id here</string>
    <string name="interstitial_ad_id" translatable="false">Put your id here</string>
</resources>
